Fix issue where expanded text boxes would not resize on small screens.

--- a/assets/sass/layout.sass
+++ b/assets/sass/layout.sass
@@ -87,7 +87,7 @@ a
           +transition-duration(250ms)
 
           background-color: hsla(0, 0%, 8%, 0.5)
-@media all and (max-width: 500px)
-  .right-pane
+@media all and (max-width: 700px)
+  .right-pane, .right-pane.expanded
     float: none
     width: 100%
